[profile.release]
lto = true
panic = 'abort'
[dependencies.contract-chain-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['contract-chain-runtime/std']

[lib]
crate-type = ['cdylib']

[workspace]
members = []

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'contract-chain-runtime-wasm'
version = '1.0.0'
